--- a/.docker/db/Dockerfile
+++ b/.docker/db/Dockerfile
@@ -1,7 +1,5 @@
 FROM mysql:8.0.28
 
-ADD my.cnf /etc/mysql/my.cnf
+ADD my.cnf /etc/mysql/conf.d/my.cnf
 
-RUN chmod 644 /etc/mysql/my.cnf
-
-RUN mkdir /var/lib/mysql-files || echo "already exists /val/lib/mysql-files directory"
+RUN chmod 644 /etc/mysql/conf.d/my.cnf
