--- a/.docker/db/my.cnf
+++ b/.docker/db/my.cnf
@@ -1,23 +1,10 @@
-[mysqld]
-datadir = /var/lib/mysql
-socket = /var/lib/mysql/mysql.sock
-secure-file-priv = /var/lib/mysql-files
-user = mysql
-pid-file = /var/run/mysqld/mysqld.pid
-default-time-zone = SYSTEM
-log_timestamps = SYSTEM
-# Error Log
-log-error = mysql-error.log
-# Slow Query Log
-slow_query_log = 1
-slow_query_log_file = mysql-slow.log
-long_query_time = 1.0
-log_queries_not_using_indexes = 0
-general_log = 1
-general_log_file = mysql-general.log
-
 [mysql]
 default-character-set = utf8mb4
+
+[mysqld]
+character-set-server = utf8mb4
+collation-server = utf8mb4_bin
+default-authentication-plugin = mysql_native_password
 
 [client]
 default-character-set = utf8mb4
