--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,6 +15,7 @@
         "league/oauth2-client": "^2.7"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.10",
         "laravel/sail": "^1.0.1",
