--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -37,9 +37,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Cache Docker Image to Layer
-        uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
+      # サードパーティ製のキャッシュアクション
+      # - name: Cache Docker Image to Layer
+      #   uses: satackey/action-docker-layer-caching@v0.0.11
+      #   continue-on-error: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: docker-compose up
         run: docker-compose up -d
