--- a/.github/workflows/frontend-testing.yml
+++ b/.github/workflows/frontend-testing.yml
@@ -18,17 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Move to frontend directory
-        run: cd frontend
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: npm
 
       - name: Install Dependencies
+        working-directory: frontend
         run: npm ci
 
       - name: Execute Lint
+        working-directory: frontend
         run: npm run lint
