--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -1,11 +1,16 @@
 name: Backend Testing
 
+# on:
+#   pull_request:
+#     paths:
+#       - 'backend/**'
+#       - '.docker/**'
+#       - '.github/workflows/**'
+
 on:
-  pull_request:
-    paths:
-      - 'backend/**'
-      - '.docker/**'
-      - '.github/workflows/**'
+  push:
+    branches:
+      - "**"
 
 # 連続してpushすると一つ前の実行中のjobが停止される設定
 concurrency:
