--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -1,16 +1,11 @@
 name: Backend Testing
 
-# on:
-#   pull_request:
-#     paths:
-#       - 'backend/**'
-#       - '.docker/**'
-#       - '.github/workflows/**'
-
 on:
-  push:
-    branches:
-      - "**"
+  pull_request:
+    paths:
+      - 'backend/**'
+      - '.docker/**'
+      - '.github/workflows/**'
 
 # 連続してpushすると一つ前の実行中のjobが停止される設定
 concurrency:
@@ -50,13 +45,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -65,7 +60,7 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-        name: Move cache
+      - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
