--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -35,16 +35,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Cache Docker layers
+        id: cache-docker
         uses: actions/cache@v2
         with:
           path: |
             ~/.docker
-          key: ${{ runner.os }}-docker-${{ hashFiles('.docker/**') }}
+          key: ${{ runner.os }}-docker-${{ hashFiles('.docker/docker-compose.yml') }}
           restore-keys: |
             ${{ runner.os }}-docker-
 
       - name: docker-compose up
-        run: docker-compose up -d
+        run: docker-compose up -d --build
+        if: steps.cache-docker.outputs.cache-hit != 'true'
 
       - name: Copy Environment File
         run: docker-compose exec -T app cp .env.example .env
