--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -57,7 +57,7 @@ jobs:
           docker-compose exec -T app composer --version
 
       - name: Composer Install
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache-docker.outputs.cache-hit != 'true'
         run: docker-compose exec -T app composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
       - name: Composer Dump Autoload
@@ -76,7 +76,7 @@ jobs:
       - name: Excute Migrate
         run: docker-compose exec -T app php artisan migrate
 
-      - name: Rollback Testing
+      - name: Rollback
         run: docker-compose exec -T app php artisan migrate:refresh
 
       - name: Seeding Testing
