--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -44,17 +44,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-docker-
 
-      - name: Docker Compose Build Up
-        run: docker-compose up -d --build
+      - name: Docker Compose Build
+        run: docker-compose build
         if: steps.cache-docker.outputs.cache-hit != 'true'
+
+      - name: Docker Compose Up
+        run: docker-compose up -d
 
       - name: Docker Compose Process
         run: docker-compose ps -a
 
       - name: PHP, Composer Version
         run: |
-          docker-compose exec -T app php --version
-          docker-compose exec -T app composer --version
+          docker-compose exec app php --version
+          docker-compose exec app composer --version
 
       - name: Composer Install
         if: steps.cache-docker.outputs.cache-hit != 'true'
