--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -34,14 +34,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        id: cache-docker
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.docker
+          key: ${{ runner.os }}-docker-${{ hashFiles('docker-compose.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: |
+          docker-compose build
+          docker-compose push
+        if: steps.cache-docker.outputs.cache-hit != 'true'
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # - name: Cache Docker layers
       #   id: cache-docker
@@ -57,11 +80,11 @@ jobs:
       #   run: docker-compose build
       #   if: steps.cache-docker.outputs.cache-hit != 'true'
 
-      # - name: Docker Compose Up
-      #   run: docker-compose up -d
+      - name: Docker Compose Up
+        run: docker-compose up -d
 
-      # - name: Docker Compose Process
-      #   run: docker-compose ps -a
+      - name: Docker Compose Process
+        run: docker-compose ps -a
 
       # - name: PHP, Composer Version
       #   run: |
