--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -47,19 +47,19 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.IMEGE_CACHE_DIR }}
-          key: ${{ runner.os }}-docker-image-${{ hashFiles('**/Dockerfile') }}
+          key: ${{ runner.os }}-docker-image-${{ hashFiles('./docker-compose.yaml') }}
           restore-keys: |
             ${{ runner.os }}-docker-
 
       - name: Cache Composer dependencies
-        uses: actions/cache@v2
         id: composer-cache
+        uses: actions/cache@v2
         with:
           path: ./backend/vendor
           key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Create image cashe file on fullpath
+      - name: Create docker image cashe file on fullpath
         run: echo "FILE_PATH=${{env.IMEGE_CACHE_DIR}}/tennis-track-latest.tar" >> "$GITHUB_ENV"
 
       - name: Load docker image if exist cashe
@@ -70,7 +70,7 @@ jobs:
         if: steps.cache-docker.outputs.cache-hit != 'true'
         run: |
           mkdir -p ${{ env.IMEGE_CACHE_DIR }}
-          docker build . --file ./Dockerfile --tag ${{ env.IMAGE_NAME }}
+          docker-compose build . --file ./docker-compose.yaml --tag ${{ env.IMAGE_NAME }}
           docker save --output ${{ env.FILE_PATH }} ${{ env.IMAGE_NAME }}
 
       # # ************* Setup *************
