fix: tarファイルの名前変更

--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -74,9 +74,9 @@ jobs:
         if: steps.cache-docker.outputs.cache-hit != 'true'
         run: |
           mkdir -p ${{ env.IMAGE_CACHE_DIR }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/app.tar ${{ env.APP_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/db.tar ${{ env.MYSQL_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/nginx.tar ${{ env.NGINX_IMAGE_TAG }}
+          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_app.tar ${{ env.APP_IMAGE_TAG }}
+          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_db.tar ${{ env.MYSQL_IMAGE_TAG }}
+          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_nginx.tar ${{ env.NGINX_IMAGE_TAG }}
 
       - name: Docker load
         id: docker-load
