--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -68,41 +68,44 @@ jobs:
           key: ${{ runner.os }}-composer-cache-${{ env.CACHE_VER }}-${{ hashFiles('backend/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-${{ env.CACHE_VER }}-
 
-      - name: Docker build
-        id: docker-build
-        if: steps.cache-docker.outputs.cache-hit != 'true'
-        run: docker-compose build
+      - name: Check Docker Compose Images
+        run: docker images
 
-      - name: Docker Save
-        id: docker-tag-save
-        if: steps.cache-docker.outputs.cache-hit != 'true'
-        run: |
-          mkdir -p ${{ env.IMAGE_CACHE_DIR }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_app.tar ${{ env.APP_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_db.tar ${{ env.MYSQL_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_nginx.tar ${{ env.NGINX_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_queue_worker.tar ${{ env.QUEUE_WORKER_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_mailhog.tar ${{ env.MAILHOG_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_minio.tar ${{ env.MINIO_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_redis.tar ${{ env.REDIS_IMAGE_TAG }}
+      # - name: Docker build
+      #   id: docker-build
+      #   if: steps.cache-docker.outputs.cache-hit != 'true'
+      #   run: docker-compose build
 
-      - name: Docker load
-        id: docker-load
-        if: steps.cache-docker.outputs.cache-hit == 'true'
-        run: ls  -1 ${IMAGE_CACHE_DIR}/*.tar | xargs -L 1 docker load -i
+      # - name: Docker Save
+      #   id: docker-tag-save
+      #   if: steps.cache-docker.outputs.cache-hit != 'true'
+      #   run: |
+      #     mkdir -p ${{ env.IMAGE_CACHE_DIR }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_app.tar ${{ env.APP_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_db.tar ${{ env.MYSQL_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_nginx.tar ${{ env.NGINX_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_queue_worker.tar ${{ env.QUEUE_WORKER_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_mailhog.tar ${{ env.MAILHOG_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_minio.tar ${{ env.MINIO_IMAGE_TAG }}
+      #     docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_redis.tar ${{ env.REDIS_IMAGE_TAG }}
+
+      # - name: Docker load
+      #   id: docker-load
+      #   if: steps.cache-docker.outputs.cache-hit == 'true'
+      #   run: ls  -1 ${IMAGE_CACHE_DIR}/*.tar | xargs -L 1 docker load -i
 
       # # ************* Setup *************
       # - name: Docker Compose Pull
       #   run: docker-compose pull
 
-      - name: Check Docker Compose Images
-        run: docker images
+      # - name: Check Docker Compose Images
+      #   run: docker images
 
-      - name: Docker Compose Up
-        run: docker-compose up -d
+      # - name: Docker Compose Up
+      #   run: docker-compose up -d
 
-      - name: Docker Compose Process
-        run: docker-compose ps -a
+      # - name: Docker Compose Process
+      #   run: docker-compose ps -a
 
       # - name: PHP, Composer Version
       #   run: |
